--- a/creations/index.html
+++ b/creations/index.html
@@ -9,15 +9,18 @@
     <meta property="og:description" content="Creations, am i right?">
     <meta property="og:url" content="https://parv66.github.io/parv66.inc/creations/">
     <meta property="og:image" content="https://parv66.github.io/parv66.inc/parv66.uwu.jpg">
+    <script src="https://parv66.github.io/parv66.inc/gui/contextmenu.js"></script>
+    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/contextmenu.css">
   </head>
   <body>
+      <div id="contextmenu" style="box-shadow: rgb(0, 0, 0) 2px 0px 0px 0px, rgb(0, 0, 0) 0px -2px 0px 0px, rgb(0, 0, 0) 0px 2px 0px 0px, rgb(0, 0, 0) -2px 0px 0px 0px; width: auto; height: auto; border: 2px solid rgb(44, 8, 99); position: fixed; background-color: rgba(16, 0, 16, 0.94); padding: 0.38em; font-family: minefont; margin: 0.125em 0.25em; z-index: 6420; display: flex; flex-flow: column wrap; place-content: flex-start; top: 1px; left: 1px;"><a style="margin:0;text-shadow:.125em .125em 0 #3e3e3e;color:#fff;cursor:default">Context Menu</a> <a style="color:#55F;text-shadow:.125em .125em 0 #232391;margin:0;cursor:default">Equipment</a> <a class="coption" style="margin-top:10px;cursor:default;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/">Accommodation I</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/about">Particularity IV</a> <a class="coption" style="text-shadow: 0.125em 0.125em 0 #363636;color: #9f9f9f;text-decoration:none">Creations III</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/downloads">Downloads IX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random">Random LXIX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/contact">Associate II</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random/CDXX">???</a> <a style="color:#fff;text-decoration:none;text-shadow:.125em .125em 0 #3e3e3e;margin:0;margin-top:10px;cursor:default">Durability: 69 / 420</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">parv66:context_menu</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">NBT: 5 tag(s)</a></div>
    <img class="chest" src="https://parv66.github.io/parv66.inc/chest.png">
     <div id="minetip-tooltip" style="display: none; position: absolute; top: 273px; left: 313px;">Copper++ Addon</div>
     <div class="main1">
   <h1>Large Chest</h1>
   <div class="boxes">
-    <div class="box"><a class="copperplusplus" draggable="false" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></div>
-    <div class="box"><a class="papple" draggable="false" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></div>
+    <div class="box"><a class="copperplusplus" draggable="false" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon<br><span class='mcTextGrey'>Adds In Redstone-like Copper Stuff!</span>"></span></a></div>
+    <div class="box"><a class="papple" draggable="false" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon<br><span class='mcTextGrey'>Makes Apple Into Placeable Blocks!</span>"></span></a></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
