--- a/creations/index.html
+++ b/creations/index.html
@@ -80,8 +80,8 @@
     <div class="box"></div>
   </div>
 </div>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="creations.js"></script>
-      <script src="https://parv66.github.io/parv66.inc/gui/itemhover.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="creations.js"></script>
+<script src="https://parv66.github.io/parv66.inc/gui/itemhover.js"></script>
 
 </body></html>
