--- a/creations/index.html
+++ b/creations/index.html
@@ -9,7 +9,6 @@
     <meta property="og:description" content="Creations, am i right?">
     <meta property="og:url" content="https://parv66.github.io/parv66.inc/creations/">
     <meta property="og:image" content="https://parv66.github.io/parv66.inc/parv66.uwu.jpg">
-    <script src="https://parv66.github.io/parv66.inc/gui/contextmenu.js"></script>
     <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/contextmenu.css">
   </head>
   <body>
@@ -81,7 +80,8 @@
   </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="creations.js"></script>
+<script src="https://parv66.github.io/parv66.inc/creations/creations.js"></script>
+<script src="https://parv66.github.io/parv66.inc/gui/contextmenu.js"></script>
 <script src="https://parv66.github.io/parv66.inc/gui/itemhover.js"></script>
 
 </body></html>
