--- a/index.html
+++ b/index.html
@@ -4,24 +4,6 @@
      <meta charset=“UTF-8”>
      <meta name="keywords" content="parv66, PARV66.INC, PARV66 IS COOL, PARV66, parv66.inc, PARV66.inc, parvv">
      <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
-     <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
-     <link rel="apple-touch-icon" sizes="57x57" href="/fav/apple-icon-57x57.png">
-     <link rel="apple-touch-icon" sizes="60x60" href="/fav/apple-icon-60x60.png">
-     <link rel="apple-touch-icon" sizes="72x72" href="/fav/apple-icon-72x72.png">
-     <link rel="apple-touch-icon" sizes="76x76" href="fav/apple-icon-76x76.png">
-     <link rel="apple-touch-icon" sizes="114x114" href="fav/apple-icon-114x114.png">
-     <link rel="apple-touch-icon" sizes="120x120" href="fav/apple-icon-120x120.png">
-     <link rel="apple-touch-icon" sizes="144x144" href="fav/apple-icon-144x144.png">
-     <link rel="apple-touch-icon" sizes="152x152" href="fav/apple-icon-152x152.png">
-     <link rel="apple-touch-icon" sizes="180x180" href="fav/apple-icon-180x180.png">
-     <link rel="icon" type="image/png" sizes="192x192"  href="fav/android-icon-192x192.png">
-     <link rel="icon" type="image/png" sizes="32x32" href="fav/favicon-32x32.png">
-     <link rel="icon" type="image/png" sizes="96x96" href="fav/favicon-96x96.png">
-     <link rel="icon" type="image/png" sizes="16x16" href="fav/favicon-16x16.png">
-     <link rel="manifest" href="fav/manifest.json">
-     <meta name="msapplication-TileColor" content="#ffffff">
-     <meta name="msapplication-TileImage" content="fav/ms-icon-144x144.png">
-     <meta name="theme-color" content="#ffffff">
      <title>PARV66.inc</title>
      <meta name="title" content="PARV66.inc">
      <meta name="description" content="parv66.inc is a... thing.  yep a thing.    idk what else...    ok bye">
@@ -42,14 +24,6 @@
  <body>
   <div id="contextmenu" style="box-shadow:#000 2px 0 0 0,#000 0 -2px 0 0,#000 0 2px 0 0,#000 -2px 0 0 0;width:auto;height:auto;border:2px solid #2c0863;position:fixed;background-color:rgba(16,0,16,.94);padding:.38em;font-family:minefont;margin:.125em .25em;z-index:6420;display:flex;flex-flow:column wrap;place-content:flex-start;top:456px;left:221px"><a style="margin:0;text-shadow:.125em .125em 0 #3e3e3e;color:#fff;cursor:default">Context Menu</a> <a style="color:#55F;text-shadow:.125em .125em 0 #232391;margin:0;cursor:default">Equipment</a><a class="coption" style="margin-top:10px;cursor:default;text-shadow: 0.125em 0.125em 0 #363636;color:#9f9f9f;text-decoration:none;">Accommodation I</a><a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/about">Particularity IV</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/creations">Creations III</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/downloads">Downloads IX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random">Random LXIX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/contact">Associate II</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random/CDXX">???</a> <a style="color:#fff;text-decoration:none;text-shadow:.125em .125em 0 #3e3e3e;margin:0;margin-top:10px;cursor:default">Durability: 69 / 420</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">parv66:context_menu</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">NBT: 5 tag(s)</a></div>  <img src="logo.png" class="logo">
   <p>sidebar here<p> 
-  <div class="u-fade-type-left js-scroll-trigger">ewh?</div>
-  <div class="u-fade-type-right js-scroll-trigger">ah yes *animation*</div>
-  <div class="u-fade-type-left js-scroll-trigger">sup???</div>
-  <div class="u-fade-type-right js-scroll-trigger">this is dumb!</div>
-  <div class="u-fade-type-left js-scroll-trigger">no u.</div>
-  <footer>
-   <h4>footer</h4>
-   <a href="" class="cord"></a><a href="" class="youtube"></a>
-  </footer>
+  <!-- <div class="u-fade-type-left js-scroll-trigger">ewh?</div><div class="u-fade-type-right js-scroll-trigger">ah yes *animation*</div><div class="u-fade-type-left js-scroll-trigger">sup???</div><div class="u-fade-type-right js-scroll-trigger">this is dumb!</div><div class="u-fade-type-left js-scroll-trigger">no u.</div> -->
  </body>
 </html>
