--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
    <button class="tab"><img class="tabicon"><a class="tabtext">test2<a><br><a class="tabtex2"></a></button>
    <button class="tab"><img class="tabicon"><a class="tabtext">test3<a><br><a class="tabtex2"></a></button>
    <button class="tab"><img class="tabicon"><a class="tabtext">test4<a><br><a class="tabtex2"></a></button>
-    <div class"tabindex tab1"></div>
-    <div class"tabindex tab2"></div>
-    <div class"tabindex tab3"></div>
-    <div class"tabindex tab4"></div>
+    <div class="tabindex tab1" style="box-shadow: 8px 0 0 0 #555555, 0 8px 0 0 #555555, 4px 4px 0 0 #555555, -8px 0 0 0 #e8e8e8, 0 -8px 0 0 #e8e8e8, -4px -4px 0 0 #e8e8e8, 0 0 0 4px #b5b4b"></div>
+    <div class="tabindex tab2" style="box-shadow: 8px 0 0 0 #555555, 0 8px 0 0 #555555, 4px 4px 0 0 #555555, -8px 0 0 0 #e8e8e8, 0 -8px 0 0 #e8e8e8, -4px -4px 0 0 #e8e8e8, 0 0 0 4px #b5b4b"></div>
+    <div class="tabindex tab3" style="box-shadow: 8px 0 0 0 #555555, 0 8px 0 0 #555555, 4px 4px 0 0 #555555, -8px 0 0 0 #e8e8e8, 0 -8px 0 0 #e8e8e8, -4px -4px 0 0 #e8e8e8, 0 0 0 4px #b5b4b"></div>
+    <div class="tabindex tab4" style="box-shadow: 8px 0 0 0 #555555, 0 8px 0 0 #555555, 4px 4px 0 0 #555555, -8px 0 0 0 #e8e8e8, 0 -8px 0 0 #e8e8e8, -4px -4px 0 0 #e8e8e8, 0 0 0 4px #b5b4b"></div>
    <div>
   <!-- <div class="u-fade-type-left js-scroll-trigger">ewh?</div><div class="u-fade-type-right js-scroll-trigger">ah yes *animation*</div><div class="u-fade-type-left js-scroll-trigger">sup???</div><div class="u-fade-type-right js-scroll-trigger">this is dumb!</div><div class="u-fade-type-left js-scroll-trigger">no u.</div> -->
  </body>
