--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!doctype html>
-<html>
- <head>
-     <meta charset=“UTF-8”>
+<html><head>
+     <meta charset="“UTF-8”">
      <meta name="keywords" content="parv66, PARV66.INC, PARV66 IS COOL, PARV66, parv66.inc, PARV66.inc, parvv">
-     <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
+     <meta name="“viewport”" content="“width=device-width," initial-scale="1.0”">
      <title>PARV66.inc</title>
      <meta name="title" content="PARV66.inc">
      <meta name="description" content="parv66.inc is a... thing.  yep a thing.    idk what else...    ok bye">
      <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/style.css">
      <meta property="og:type" content="parv66.github.io/parv66.inc">
-     <meta property="og:title" content="PARV66.inc" />
-     <meta property="og:description" content="PARV66.inc idk what else" />
-     <meta property="og:url" content="https://parv66.github.io/parv66.inc" />
-     <meta property="og:image" content="https://parv66.github.io/parv66.inc/parv66.uwu.jpg" />
+     <meta property="og:title" content="PARV66.inc">
+     <meta property="og:description" content="PARV66.inc idk what else">
+     <meta property="og:url" content="https://parv66.github.io/parv66.inc">
+     <meta property="og:image" content="https://parv66.github.io/parv66.inc/parv66.uwu.jpg">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script src="key.js"></script>
      <script src="https://parv66.github.io/parv66.inc/gui/mcbtnclick.js"></script>
@@ -22,19 +21,20 @@
      <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/scrollanimation.css">
   </head>
  <body>
-  <img src="https://parv66.github.io/parv66.inc/logo.png">
-  <div id="contextmenu" style="box-shadow:#000 2px 0 0 0,#000 0 -2px 0 0,#000 0 2px 0 0,#000 -2px 0 0 0;width:auto;height:auto;border:2px solid #2c0863;position:fixed;background-color:rgba(16,0,16,.94);padding:.38em;font-family:minefont;margin:.125em .25em;z-index:6420;display:flex;flex-flow:column wrap;place-content:flex-start;top:456px;left:221px"><a style="margin:0;text-shadow:.125em .125em 0 #3e3e3e;color:#fff;cursor:default">Context Menu</a> <a style="color:#55F;text-shadow:.125em .125em 0 #232391;margin:0;cursor:default">Equipment</a><a class="coption" style="margin-top:10px;cursor:default;text-shadow: 0.125em 0.125em 0 #363636;color:#9f9f9f;text-decoration:none;">Accommodation I</a><a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/about">Particularity IV</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/creations">Creations III</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/downloads">Downloads IX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random">Random LXIX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/contact">Associate II</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random/CDXX">???</a> <a style="color:#fff;text-decoration:none;text-shadow:.125em .125em 0 #3e3e3e;margin:0;margin-top:10px;cursor:default">Durability: 69 / 420</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">parv66:context_menu</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">NBT: 5 tag(s)</a></div>  
-  <p>sidebar here<p> 
-  <div class="maincage">
-   <button class="tab"><img class="tabicon"><a class="tabtext">test1<a><br><a class="tabtex2"></a></button>
-   <button class="tab"><img class="tabicon"><a class="tabtext">test2<a><br><a class="tabtex2"></a></button>
-   <button class="tab"><img class="tabicon"><a class="tabtext">test3<a><br><a class="tabtex2"></a></button>
-   <button class="tab"><img class="tabicon"><a class="tabtext">test4<a><br><a class="tabtex2"></a></button>
-    <div class="tabindex tab1" style="box-shadow: 8px 0 0 0 #555555, 0 8px 0 0 #555555, 4px 4px 0 0 #555555, -8px 0 0 0 #e8e8e8, 0 -8px 0 0 #e8e8e8, -4px -4px 0 0 #e8e8e8, 0 0 0 4px #b5b4b"></div>
+  <img src="https://parv66.github.io/parv66.inc/logo.png" style="width: 100vmax;">
+  <div id="contextmenu" style="box-shadow: rgb(0, 0, 0) 2px 0px 0px 0px, rgb(0, 0, 0) 0px -2px 0px 0px, rgb(0, 0, 0) 0px 2px 0px 0px, rgb(0, 0, 0) -2px 0px 0px 0px; width: auto; height: auto; border: 2px solid rgb(44, 8, 99); position: fixed; background-color: rgba(16, 0, 16, 0.94); padding: 0.38em; font-family: minefont; margin: 0.125em 0.25em; z-index: 6420; display: none; flex-flow: column wrap; place-content: flex-start; top: 384px; left: 797px;"><a style="margin:0;text-shadow:.125em .125em 0 #3e3e3e;color:#fff;cursor:default">Context Menu</a> <a style="color:#55F;text-shadow:.125em .125em 0 #232391;margin:0;cursor:default">Equipment</a><a class="coption" style="margin-top:10px;cursor:default;text-shadow: 0.125em 0.125em 0 #363636;color:#9f9f9f;text-decoration:none;">Accommodation I</a><a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/about">Particularity IV</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/creations">Creations III</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/downloads">Downloads IX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random">Random LXIX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/contact">Associate II</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random/CDXX">???</a> <a style="color:#fff;text-decoration:none;text-shadow:.125em .125em 0 #3e3e3e;margin:0;margin-top:10px;cursor:default">Durability: 69 / 420</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">parv66:context_menu</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">NBT: 5 tag(s)</a></div>  
+  <p>sidebar here</p><p> 
+  </p><div class="maincage" style="z-index: 5;display: flex;align-content: center;flex-wrap: wrap;flex-direction: column;justify-content: center;align-items: center;width: 100vw;">
+   <button class="tab"><img class="tabicon"><a class="tabtext">test1</a><a><br></a><a class="tabtex2"></a></button>
+   <button class="tab"><img class="tabicon"><a class="tabtext">test2</a><a><br></a><a class="tabtex2"></a></button>
+   <button class="tab"><img class="tabicon"><a class="tabtext">test3</a><a><br></a><a class="tabtex2"></a></button>
+   <button class="tab"><img class="tabicon"><a class="tabtext">test4</a><a><br></a><a class="tabtex2"></a></button>
+    <div class="tabindex tab1" style="box-shadow: 8px 0 0 0 #555555, 0 8px 0 0 #555555, 4px 4px 0 0 #555555, -8px 0 0 0 #e8e8e8, 0 -8px 0 0 #e8e8e8, -4px -4px 0 0 #e8e8e8, 0 0 0 4px #b5b4b5, 4px 8px 0 0 #555, 8px 4px 0 0 #555, -4px -8px 0 0 #e8e8e8, -8px -4px 0 0 #e8e8e8, 8px -4px 0 0 #000, 4px -8px 0 0 #000, -8px 4px 0 0 #000, -4px 8px 0 0 #000, -8px -8px 0 0 #000, 8px 8px 0 0 #000, -12px 0 0 0 #000, -12px -4px 0 0 #000, 12px 0 0 0 #000, 12px 4px 0 0 #000, 0 -12px 0 0 #000, -4px -12px 0 0 #000, 0 12px 0 0 #000, 4px 12px 0 0 #000;width: 96vw;height: 100px;background-color: #b9b9b9;position: relative;left: -7px;"></div>
     <div class="tabindex tab2" style="box-shadow: 8px 0 0 0 #555555, 0 8px 0 0 #555555, 4px 4px 0 0 #555555, -8px 0 0 0 #e8e8e8, 0 -8px 0 0 #e8e8e8, -4px -4px 0 0 #e8e8e8, 0 0 0 4px #b5b4b"></div>
     <div class="tabindex tab3" style="box-shadow: 8px 0 0 0 #555555, 0 8px 0 0 #555555, 4px 4px 0 0 #555555, -8px 0 0 0 #e8e8e8, 0 -8px 0 0 #e8e8e8, -4px -4px 0 0 #e8e8e8, 0 0 0 4px #b5b4b"></div>
     <div class="tabindex tab4" style="box-shadow: 8px 0 0 0 #555555, 0 8px 0 0 #555555, 4px 4px 0 0 #555555, -8px 0 0 0 #e8e8e8, 0 -8px 0 0 #e8e8e8, -4px -4px 0 0 #e8e8e8, 0 0 0 4px #b5b4b"></div>
    <div>
   <!-- <div class="u-fade-type-left js-scroll-trigger">ewh?</div><div class="u-fade-type-right js-scroll-trigger">ah yes *animation*</div><div class="u-fade-type-left js-scroll-trigger">sup???</div><div class="u-fade-type-right js-scroll-trigger">this is dumb!</div><div class="u-fade-type-left js-scroll-trigger">no u.</div> -->
- </body>
-</html>
+ 
+
+</div></div><audio src="https://parv66.tk/random.click.ogg" id="btnsnd"></audio></body></html>
