--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
      <script src="https://parv66.github.io/parv66.inc/gui/mcbtnclick.js"></script>
      <script src="https://parv66.github.io/parv66.inc/gui/scrollanimation.js"></script>
      <script src="https://parv66.github.io/parv66.inc/gui/contextmenu.js"></script>
+     <script src="https://parv66.github.io/parv66.inc/gui/tabui.js"></script>
      <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/contextmenu.css">
      <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/scrollanimation.css">
   </head>
@@ -29,10 +30,10 @@
    <button class="tab"><img class="tabicon"><a class="tabtext">test2</a><a><br></a><a class="tabtex2"></a></button>
    <button class="tab"><img class="tabicon"><a class="tabtext">test3</a><a><br></a><a class="tabtex2"></a></button>
    <button class="tab"><img class="tabicon"><a class="tabtext">test4</a><a><br></a><a class="tabtex2"></a></button>
-    <div class="tabindex tab1" style="box-shadow: 8px 0 0 0 #555555, 0 8px 0 0 #555555, 4px 4px 0 0 #555555, -8px 0 0 0 #e8e8e8, 0 -8px 0 0 #e8e8e8, -4px -4px 0 0 #e8e8e8, 0 0 0 4px #b5b4b5, 4px 8px 0 0 #555, 8px 4px 0 0 #555, -4px -8px 0 0 #e8e8e8, -8px -4px 0 0 #e8e8e8, 8px -4px 0 0 #000, 4px -8px 0 0 #000, -8px 4px 0 0 #000, -4px 8px 0 0 #000, -8px -8px 0 0 #000, 8px 8px 0 0 #000, -12px 0 0 0 #000, -12px -4px 0 0 #000, 12px 0 0 0 #000, 12px 4px 0 0 #000, 0 -12px 0 0 #000, -4px -12px 0 0 #000, 0 12px 0 0 #000, 4px 12px 0 0 #000;width: 96vw;height: 100px;background-color: #C6C6C6;"></div>
-    <div class="tabindex tab2" style="box-shadow: 8px 0 0 0 #555555, 0 8px 0 0 #555555, 4px 4px 0 0 #555555, -8px 0 0 0 #e8e8e8, 0 -8px 0 0 #e8e8e8, -4px -4px 0 0 #e8e8e8, 0 0 0 4px #b5b4b"></div>
-    <div class="tabindex tab3" style="box-shadow: 8px 0 0 0 #555555, 0 8px 0 0 #555555, 4px 4px 0 0 #555555, -8px 0 0 0 #e8e8e8, 0 -8px 0 0 #e8e8e8, -4px -4px 0 0 #e8e8e8, 0 0 0 4px #b5b4b"></div>
-    <div class="tabindex tab4" style="box-shadow: 8px 0 0 0 #555555, 0 8px 0 0 #555555, 4px 4px 0 0 #555555, -8px 0 0 0 #e8e8e8, 0 -8px 0 0 #e8e8e8, -4px -4px 0 0 #e8e8e8, 0 0 0 4px #b5b4b"></div>
+    <div class="tabindex tab1"></div>
+    <div class="tabindex tab2" style="display: none;"></div>
+    <div class="tabindex tab3" style="display: none;"></div>
+    <div class="tabindex tab4" style="display: none;"></div>
    <div>
   <!-- <div class="u-fade-type-left js-scroll-trigger">ewh?</div><div class="u-fade-type-right js-scroll-trigger">ah yes *animation*</div><div class="u-fade-type-left js-scroll-trigger">sup???</div><div class="u-fade-type-right js-scroll-trigger">this is dumb!</div><div class="u-fade-type-left js-scroll-trigger">no u.</div> -->
  
