--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 <div id="contextmenu" style="box-shadow: rgb(0, 0, 0) 2px 0px 0px 0px, rgb(0, 0, 0) 0px -2px 0px 0px, rgb(0, 0, 0) 0px 2px 0px 0px, rgb(0, 0, 0) -2px 0px 0px 0px;width: auto;height: auto;border: 2px solid rgb(44, 8, 99);position: fixed;background-color: rgba(16, 0, 16, 0.94);padding: 0.38em;font-family: minefont;margin: 0.125em 0.25em;z-index: 6420;flex-flow: column wrap;place-content: flex-start;top: 479px;left: 204px;display: flex;flex-direction: column;flex-wrap: nowrap;align-content: center;justify-content: center;align-items: flex-start;"><a style="margin:0;text-shadow:.125em .125em 0 #3e3e3e;color:#fff;cursor:default">Context Menu</a> <a style="color:#55F;text-shadow:.125em .125em 0 #232391;margin:0;cursor:default">Equipment</a><a class="coption" style="margin-top:10px;cursor:default;text-shadow: 0.125em 0.125em 0 #363636;color:#9f9f9f;text-decoration:none;">Accommodation I</a><a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/about">Particularity IV</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/creations">Creations III</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/downloads">Downloads IX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random">Random LXIX</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/contact">Associate II</a> <a class="coption" style="text-shadow:.125em .125em 0 #1f1f1f;color:#555;text-decoration:none" href="https://parv66.github.io/parv66.inc/random/CDXX">???</a> <a style="color:#fff;text-decoration:none;text-shadow:.125em .125em 0 #3e3e3e;margin:0;margin-top:10px;cursor:default">Durability: 69 / 420</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">parv66:context_menu</a> <a style="text-shadow:.125em .125em 0 #222;margin:0;color:#555;cursor:default">NBT: 5 tag(s)</a></div>
       <p>sidebar here</p><p> 
   </p><div class="maincage" style="z-index: 5;display: flex;width: 100vw;flex-wrap: wrap;flex-direction: row;align-items: center;align-content: center;justify-content: center;">
-   <button class="tab tabbtn1"><img class="tabicon"><a class="tabtext">test1</a><a><br></a><a class="tabtex2"></a></button>
-   <button class="tab tabbtn2"><img class="tabicon"><a class="tabtext">test2</a><a><br></a><a class="tabtex2"></a></button>
-   <button class="tab tabbtn3"><img class="tabicon"><a class="tabtext">test3</a><a><br></a><a class="tabtex2"></a></button>
-   <button class="tab tabbtn4"><img class="tabicon"><a class="tabtext">test4</a><a><br></a><a class="tabtex2"></a></button>
-    <div class="tabindex tab1"></div>
-    <div class="tabindex tab2" style="display: none;"></div>
-    <div class="tabindex tab3" style="display: none;"></div>
-    <div class="tabindex tab4" style="display: none;"></div>
+   <button class="tab tabbtnone"><img class="tabicon"><a class="tabtext">test1</a><a><br></a><a class="tabtex2"></a></button>
+   <button class="tab tabbtntwo"><img class="tabicon"><a class="tabtext">test2</a><a><br></a><a class="tabtex2"></a></button>
+   <button class="tab tabbtnthree"><img class="tabicon"><a class="tabtext">test3</a><a><br></a><a class="tabtex2"></a></button>
+   <button class="tab tabbtnfour"><img class="tabicon"><a class="tabtext">test4</a><a><br></a><a class="tabtex2"></a></button>
+    <div class="tabindex tabone"></div>
+    <div class="tabindex tabtwo" style="display: none;"></div>
+    <div class="tabindex tabthree" style="display: none;"></div>
+    <div class="tabindex tabfour" style="display: none;"></div>
    <div>
   <!-- <div class="u-fade-type-left js-scroll-trigger">ewh?</div><div class="u-fade-type-right js-scroll-trigger">ah yes *animation*</div><div class="u-fade-type-left js-scroll-trigger">sup???</div><div class="u-fade-type-right js-scroll-trigger">this is dumb!</div><div class="u-fade-type-left js-scroll-trigger">no u.</div> -->
  
