--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
    <button id="tabbtnthree" class="tab tabbtnthree"><img class="tabicon"><a class="tabtext">test3</a><a><br></a><a class="tabtex2"></a></button>
    <button id="tabbtnfour" class="tab tabbtnfour"><img class="tabicon"><a class="tabtext">test4</a><a><br></a><a class="tabtex2"></a></button>
     <div id="tabone" class="tabindex tabone"></div>
-    <div id="tabtwo" class="tabindex tabtwo" style="display: none;"></div>
-    <div id="tabthree" class="tabindex tabthree" style="display: none;"></div>
-    <div id="tabfour" class="tabindex tabfour" style="display: none;"></div>
+    <div id="tabtwo" class="tabindex tabtwo"></div>
+    <div id="tabthree" class="tabindex tabthree"></div>
+    <div id="tabfour" class="tabindex tabfour"></div>
    <div>
   <!-- <div class="u-fade-type-left js-scroll-trigger">ewh?</div><div class="u-fade-type-right js-scroll-trigger">ah yes *animation*</div><div class="u-fade-type-left js-scroll-trigger">sup???</div><div class="u-fade-type-right js-scroll-trigger">this is dumb!</div><div class="u-fade-type-left js-scroll-trigger">no u.</div> -->
  
