--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
      <script src="https://parv66.github.io/parv66.inc/gui/tabui.js"></script>
      <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/contextmenu.css">
      <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/scrollanimation.css">
+     <link type="text/css" href="//gyrocode.github.io/jplayer-jukebox/0.6.7/skin/uno/jplayer.uno.min.css" rel="stylesheet" />
+<script type="text/javascript" src="//gyrocode.github.io/jplayer-jukebox/0.6.7/jplayer.jukebox.bundle.min.js"></script>
   </head>
  <body>
   <img src="https://parv66.github.io/parv66.inc/logo.png" style="width:99%;margin-left:auto;margin-right:auto;display:block;">
@@ -38,5 +40,18 @@
   <!-- <div class="u-fade-type-left js-scroll-trigger">ewh?</div><div class="u-fade-type-right js-scroll-trigger">ah yes *animation*</div><div class="u-fade-type-left js-scroll-trigger">sup???</div><div class="u-fade-type-right js-scroll-trigger">this is dumb!</div><div class="u-fade-type-left js-scroll-trigger">no u.</div> -->
  
 
-</div></div><audio src="https://parv66.tk/random.click.ogg" id="btnsnd"></audio>
-<audio src="https://parv66.tk/random.click.ogg" id="btnsnd"></audio></body></html>
+</div>
+      </div>
+      <script type="text/javascript">   
+   $(document).ready(function(){
+      // Initialize jPlayerJukebox
+      var jpjb = new jPlayerJukebox({
+         'jukeboxOptions': {
+            'position': 'float-bl',
+            'className': 'ui-light ui-gradient'
+         }
+      });
+   });
+</script>
+</body>
+</html>
