--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </p><div class="maincage" style="z-index: 5;display: flex;width: 99%;flex-wrap: wrap;flex-direction: row;align-items: center;align-content: center;justify-content: center;">
    <button id="tabbtnone"class="tabbtn mcbtn tabbtnone"><img src="https://parv66.github.io/parv66.inc/icon/Cramped%20paper.png"class="tabicon"><a class="tabtext">pizzas?</a><br><a class="tabtext2"> 69</a></button>
    <button id="tabbtntwo" class="tabbtn mcbtn tabbtntwo"><img src="https://parv66.github.io/parv66.inc/icon/Cramped%20paper.png" class="tabicon"><a class="tabtext">Random Junk</a><br><a class="tabtext2">3</a></button>
-   <button id="tabbtnthree" class="tabbtn mcbtn tabbtnthree"><img src="https://spng.pngfind.com/pngs/s/690-6900438_doge-pixel-art-hd-png-download.png" class="tabicon"><a class="tabtext">doge????</a><br><a class="tabtext2"> 6</a></button>
+   <button id="tabbtnthree" class="tabbtn mcbtn tabbtnthree"><img src="https://parv66.github.io/parv66.inc/icon/links.gif" class="tabicon"><a class="tabtext">links and stuff</a><br><a class="tabtext2">8</a></button>
    <button id="tabbtnfour" class="tabbtn mcbtn tabbtnfour"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRj7AJRGM9vEpjievq_AMTedAX112ZCaRN3ew&usqp=CAU" class="tabicon"><a class="tabtext">pumpkin!</a><br><a class="tabtext2"> pie</a></button>
     <div id="tabone" class="tabindex tabone"></div>
     <div id="tabtwo" class="tabindex tabtwo"></div>
